# sha_file_hashing

./: Cargo.toml  README.md
examples/: basic_usage.rs  batch_hash.rs  checksum_file.rs  file_handle.rs  validate_hash.rs
src/: lib.rs
tests/: integration_tests.rs
