[package]
name = "sha_file_hashing"
version = "0.1.0"
edition = "2024"
authors = ["Drew Chase"]
description = "A Rust library for computing and validating SHA-1 file hashes with a clean, trait-based API"
repository = "https://github.com/drew-chase/sha_file_hashing"
homepage = "https://github.com/drew-chase/sha_file_hashing"
license = "MIT OR Apache-2.0"
keywords = ["sha1", "hash", "file", "checksum", "validation"]
categories = ["cryptography", "filesystem"]
readme = "README.md"

[dependencies]
sha1 = "0.11.0-rc.3"
thiserror = "2.0.17"
